Added an alternative to get the COBOL lib path from app properties
Signed-off-by: Vasea <zzzargoman@gmail.com>